--- a/scores/index.html
+++ b/scores/index.html
@@ -419,6 +419,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>gracie</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>joe</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -432,37 +479,37 @@
 <tr>
 <td>1</td>
 <td>gracie</td>
-<td>33,000</td>
+<td>39,000</td>
 </tr>
 <tr>
-<td>2</td>
-<td>Nana_Sharon</td>
-<td>32,000</td>
+<td>2t</td>
+<td>Norma1</td>
+<td>36,250</td>
 </tr>
 <tr>
-<td>3</td>
-<td>bill</td>
-<td>30,500</td>
+<td>2t</td>
+<td>PaPaLarry</td>
+<td>36,250</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>28,250</td>
+<td>bill</td>
+<td>34,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>PaPaLarry</td>
-<td>26,250</td>
+<td>Nana_Sharon</td>
+<td>33,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>joe</td>
-<td>25,500</td>
+<td>Maryjean</td>
+<td>32,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Maryjean</td>
-<td>20,000</td>
+<td>joe</td>
+<td>27,500</td>
 </tr>
 <tr>
 <td>8</td>
