--- a/index.html
+++ b/index.html
@@ -417,6 +417,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>gracie</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Maryjean</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -430,37 +472,37 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>72,250</td>
+<td>80,250</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Norma1</td>
-<td>68,250</td>
+<td>78,250</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Maryjean</td>
-<td>67,000</td>
+<td>bill</td>
+<td>76,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>bill</td>
-<td>64,500</td>
+<td>Maryjean</td>
+<td>69,000</td>
 </tr>
 <tr>
 <td>5</td>
+<td>gracie</td>
+<td>63,500</td>
+</tr>
+<tr>
+<td>6</td>
 <td>joe</td>
 <td>62,000</td>
 </tr>
 <tr>
-<td>6</td>
-<td>gracie</td>
-<td>57,500</td>
-</tr>
-<tr>
 <td>7</td>
 <td>Nana_Sharon</td>
-<td>53,000</td>
+<td>57,000</td>
 </tr>
 <tr>
 <td>8</td>
