--- a/index.html
+++ b/index.html
@@ -427,6 +427,58 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Maryjean</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>patc</td>
+<td>500</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -440,32 +492,32 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>96,250</td>
+<td>106,250</td>
 </tr>
 <tr>
 <td>2</td>
 <td>gracie</td>
-<td>87,500</td>
+<td>99,500</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Maryjean</td>
-<td>85,000</td>
+<td>bill</td>
+<td>90,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>bill</td>
-<td>82,500</td>
+<td>Norma1</td>
+<td>86,750</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Norma1</td>
-<td>80,750</td>
+<td>Maryjean</td>
+<td>86,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Nana_Sharon</td>
-<td>63,500</td>
+<td>65,500</td>
 </tr>
 <tr>
 <td>7</td>
@@ -475,12 +527,12 @@
 <tr>
 <td>8</td>
 <td>JoAnnmeme</td>
-<td>34,500</td>
+<td>38,500</td>
 </tr>
 <tr>
 <td>9</td>
 <td>patc</td>
-<td>13,750</td>
+<td>14,250</td>
 </tr>
 </tbody>
 </table>
