--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>gracie</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -380,32 +422,32 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>112,250</td>
+<td>124,250</td>
 </tr>
 <tr>
 <td>2</td>
 <td>gracie</td>
-<td>109,500</td>
+<td>119,500</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Norma1</td>
-<td>94,750</td>
+<td>bill</td>
+<td>98,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>bill</td>
-<td>92,500</td>
+<td>Norma1</td>
+<td>96,750</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Maryjean</td>
-<td>90,000</td>
+<td>94,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Nana_Sharon</td>
-<td>77,500</td>
+<td>85,500</td>
 </tr>
 <tr>
 <td>7</td>
