--- a/index.html
+++ b/index.html
@@ -407,6 +407,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="larrys-special">Larry's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>gracie</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Maryjean</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -420,32 +462,32 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>124,250</td>
+<td>134,250</td>
 </tr>
 <tr>
 <td>2</td>
 <td>gracie</td>
-<td>119,500</td>
+<td>127,500</td>
 </tr>
 <tr>
 <td>3</td>
 <td>bill</td>
-<td>98,500</td>
+<td>110,500</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>96,750</td>
+<td>Maryjean</td>
+<td>100,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Maryjean</td>
-<td>94,000</td>
+<td>Norma1</td>
+<td>98,750</td>
 </tr>
 <tr>
 <td>6</td>
 <td>Nana_Sharon</td>
-<td>85,500</td>
+<td>89,500</td>
 </tr>
 <tr>
 <td>7</td>
