--- a/scores/index.html
+++ b/scores/index.html
@@ -362,6 +362,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Maryjean</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -375,7 +412,7 @@
 <tr>
 <td>1</td>
 <td>PaPaLarry</td>
-<td>146,250</td>
+<td>154,250</td>
 </tr>
 <tr>
 <td>2</td>
@@ -385,17 +422,17 @@
 <tr>
 <td>3</td>
 <td>bill</td>
-<td>114,500</td>
+<td>118,500</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Maryjean</td>
-<td>106,000</td>
+<td>112,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>Nana_Sharon</td>
-<td>99,500</td>
+<td>111,500</td>
 </tr>
 <tr>
 <td>6</td>
@@ -415,7 +452,7 @@
 <tr>
 <td>9</td>
 <td>patc</td>
-<td>22,250</td>
+<td>32,250</td>
 </tr>
 </tbody>
 </table>
