--- a/index.html
+++ b/index.html
@@ -370,6 +370,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Maryjean</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>gracie</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Norma1</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>PaPaLarry</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -382,43 +429,43 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>PaPaLarry</td>
-<td>178,250</td>
+<td>bill</td>
+<td>1,128,500</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Nana_Sharon</td>
-<td>131,500</td>
+<td>1,081,500</td>
 </tr>
 <tr>
-<td>3t</td>
-<td>bill</td>
-<td>128,500</td>
+<td>3</td>
+<td>Maryjean</td>
+<td>972,000</td>
 </tr>
 <tr>
-<td>3t</td>
-<td>gracie</td>
-<td>128,500</td>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>946,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Maryjean</td>
-<td>122,000</td>
+<td>gracie</td>
+<td>928,500</td>
 </tr>
 <tr>
 <td>6</td>
-<td>Norma1</td>
-<td>102,750</td>
+<td>PaPaLarry</td>
+<td>878,250</td>
 </tr>
 <tr>
 <td>7</td>
-<td>joe</td>
-<td>62,000</td>
+<td>Norma1</td>
+<td>852,750</td>
 </tr>
 <tr>
 <td>8</td>
-<td>JoAnnmeme</td>
-<td>46,500</td>
+<td>joe</td>
+<td>62,000</td>
 </tr>
 <tr>
 <td>9</td>
