--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Norma1</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Maryjean</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -385,42 +432,42 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>38,000</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>2</td>
+<td>PaPaLarry</td>
+<td>36,000</td>
+</tr>
+<tr>
+<td>3</td>
 <td>patc</td>
 <td>28,000</td>
 </tr>
 <tr>
-<td>3</td>
-<td>PaPaLarry</td>
+<td>4</td>
+<td>Norma1</td>
 <td>26,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>Nana_Sharon</td>
-<td>23,000</td>
-</tr>
-<tr>
 <td>5</td>
-<td>Norma1</td>
-<td>22,000</td>
+<td>Nana_Sharon</td>
+<td>24,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>14,000</td>
+<td>22,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>JoAnnmeme</td>
-<td>13,000</td>
+<td>gracie</td>
+<td>20,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>gracie</td>
-<td>8,000</td>
+<td>JoAnnmeme</td>
+<td>19,000</td>
 </tr>
 </tbody>
 </table>
