--- a/index.html
+++ b/index.html
@@ -417,6 +417,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="bills-special">Bill's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Maryjean</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -430,37 +472,37 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>40,000</td>
+<td>44,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>36,000</td>
+<td>42,000</td>
 </tr>
 <tr>
-<td>3</td>
+<td>3t</td>
+<td>Nana_Sharon</td>
+<td>34,000</td>
+</tr>
+<tr>
+<td>3t</td>
+<td>Norma1</td>
+<td>34,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>gracie</td>
+<td>32,000</td>
+</tr>
+<tr>
+<td>6</td>
 <td>patc</td>
 <td>28,000</td>
 </tr>
 <tr>
-<td>4</td>
-<td>Norma1</td>
-<td>26,000</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Nana_Sharon</td>
-<td>24,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>bill</td>
-<td>22,000</td>
-</tr>
-<tr>
 <td>7</td>
-<td>gracie</td>
-<td>20,000</td>
+<td>bill</td>
+<td>24,000</td>
 </tr>
 <tr>
 <td>8</td>
