--- a/scores/index.html
+++ b/scores/index.html
@@ -419,6 +419,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="bills-special">Bill's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>gracie</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>bill</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -432,17 +474,17 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>90,000</td>
+<td>98,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>70,000</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Norma1</td>
-<td>68,000</td>
+<td>74,000</td>
 </tr>
 <tr>
 <td>4</td>
@@ -452,17 +494,17 @@
 <tr>
 <td>5</td>
 <td>gracie</td>
-<td>51,000</td>
+<td>55,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>bill</td>
-<td>49,000</td>
+<td>patc</td>
+<td>52,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>patc</td>
-<td>42,000</td>
+<td>bill</td>
+<td>50,000</td>
 </tr>
 <tr>
 <td>8</td>
