--- a/scores/index.html
+++ b/scores/index.html
@@ -409,6 +409,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="bills-special">Bill's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Norma1</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Maryjean</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>gracie</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -422,32 +464,32 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>120,000</td>
+<td>128,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>PaPaLarry</td>
-<td>96,000</td>
+<td>108,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>Nana_Sharon</td>
-<td>82,000</td>
+<td>Norma1</td>
+<td>88,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>78,000</td>
+<td>Nana_Sharon</td>
+<td>86,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>gracie</td>
-<td>71,000</td>
+<td>73,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>bill</td>
-<td>58,000</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>7</td>
