--- a/scores/index.html
+++ b/scores/index.html
@@ -357,6 +357,38 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>bill</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>PaPaLarry</td>
+<td>850,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -369,33 +401,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>Maryjean</td>
-<td>128,000</td>
+<td>gracie</td>
+<td>1,081,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>PaPaLarry</td>
-<td>120,000</td>
+<td>bill</td>
+<td>1,024,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Nana_Sharon</td>
-<td>92,000</td>
+<td>992,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>88,000</td>
+<td>PaPaLarry</td>
+<td>970,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>gracie</td>
-<td>81,000</td>
+<td>Maryjean</td>
+<td>128,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>bill</td>
-<td>74,000</td>
+<td>Norma1</td>
+<td>88,000</td>
 </tr>
 <tr>
 <td>7</td>
