--- a/scores/index.html
+++ b/scores/index.html
@@ -372,6 +372,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Nana_Sharon</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>patc</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>800,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>750,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>700,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -385,42 +432,42 @@
 <tr>
 <td>1</td>
 <td>Norma1</td>
-<td>68,000</td>
+<td>1,068,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>46,500</td>
+<td>Maryjean</td>
+<td>978,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>JoAnnmeme</td>
-<td>45,000</td>
+<td>Nana_Sharon</td>
+<td>932,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Nana_Sharon</td>
-<td>32,000</td>
+<td>patc</td>
+<td>896,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>gracie</td>
-<td>29,000</td>
-</tr>
-<tr>
-<td>6t</td>
-<td>Maryjean</td>
-<td>28,000</td>
-</tr>
-<tr>
-<td>6t</td>
 <td>PaPaLarry</td>
-<td>28,000</td>
+<td>828,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>777,500</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>745,000</td>
 </tr>
 <tr>
 <td>8</td>
-<td>bill</td>
-<td>27,500</td>
+<td>gracie</td>
+<td>29,000</td>
 </tr>
 </tbody>
 </table>
