--- a/scores/index.html
+++ b/scores/index.html
@@ -419,6 +419,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>gracie</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>patc</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -431,38 +478,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>gracie</td>
-<td>44,000</td>
+<td>Nana_Sharon</td>
+<td>52,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>Nana_Sharon</td>
-<td>40,000</td>
+<td>JoAnnmeme</td>
+<td>48,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>JoAnnmeme</td>
-<td>38,000</td>
+<td>gracie</td>
+<td>46,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>bill</td>
-<td>34,000</td>
+<td>42,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>patc</td>
-<td>30,000</td>
+<td>31,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>PaPaLarry</td>
-<td>24,000</td>
+<td>28,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Norma1</td>
-<td>2,000</td>
+<td>8,000</td>
 </tr>
 </tbody>
 </table>
