--- a/scores/index.html
+++ b/scores/index.html
@@ -367,6 +367,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>PaPaLarry</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Nana_Sharon</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>gracie</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -380,27 +422,27 @@
 <tr>
 <td>1</td>
 <td>Nana_Sharon</td>
-<td>86,000</td>
+<td>96,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>gracie</td>
-<td>80,000</td>
+<td>84,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>69,000</td>
+<td>JoAnnmeme</td>
+<td>72,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>JoAnnmeme</td>
-<td>66,000</td>
+<td>bill</td>
+<td>71,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>52,000</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>6</td>
@@ -410,7 +452,7 @@
 <tr>
 <td>7</td>
 <td>Norma1</td>
-<td>22,000</td>
+<td>30,000</td>
 </tr>
 </tbody>
 </table>
