--- a/scores/index.html
+++ b/scores/index.html
@@ -404,6 +404,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="normas-special">Norma's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>bill</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -417,37 +459,37 @@
 <tr>
 <td>1</td>
 <td>Nana_Sharon</td>
-<td>116,000</td>
+<td>118,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>gracie</td>
-<td>96,000</td>
+<td>bill</td>
+<td>101,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>JoAnnmeme</td>
-<td>94,000</td>
+<td>100,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>bill</td>
-<td>93,000</td>
+<td>gracie</td>
+<td>96,000</td>
 </tr>
 <tr>
 <td>5</td>
 <td>PaPaLarry</td>
-<td>90,000</td>
+<td>94,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>patc</td>
-<td>59,000</td>
+<td>69,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>Norma1</td>
-<td>44,000</td>
+<td>56,000</td>
 </tr>
 </tbody>
 </table>
