--- a/index.html
+++ b/index.html
@@ -417,6 +417,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="sharons-special">Sharon's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Norma1</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>JoAnnmeme</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>Nana_Sharon</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -429,38 +476,38 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>bill</td>
-<td>38,000</td>
-</tr>
-<tr>
-<td>2</td>
 <td>Maryjean</td>
-<td>34,000</td>
+<td>44,000</td>
 </tr>
 <tr>
-<td>3</td>
-<td>patc</td>
-<td>30,000</td>
+<td>2t</td>
+<td>Norma1</td>
+<td>40,000</td>
+</tr>
+<tr>
+<td>2t</td>
+<td>bill</td>
+<td>40,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
-<td>28,000</td>
+<td>patc</td>
+<td>38,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Nana_Sharon</td>
-<td>26,000</td>
+<td>PaPaLarry</td>
+<td>29,500</td>
 </tr>
 <tr>
 <td>6</td>
-<td>PaPaLarry</td>
-<td>25,500</td>
+<td>Nana_Sharon</td>
+<td>27,000</td>
 </tr>
 <tr>
 <td>7</td>
 <td>JoAnnmeme</td>
-<td>18,000</td>
+<td>24,000</td>
 </tr>
 <tr>
 <td>8</td>
