--- a/scores/index.html
+++ b/scores/index.html
@@ -429,6 +429,58 @@
 </tr>
 </tbody>
 </table>
+<h1 id="sharons-special">Sharon's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Nana_Sharon</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>patc</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>Norma1</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>bill</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>JoAnnmeme</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Maryjean</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>gracie</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>PaPaLarry</td>
+<td>500</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -442,42 +494,42 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>68,000</td>
+<td>70,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>patc</td>
-<td>54,000</td>
+<td>64,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>bill</td>
-<td>50,000</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Norma1</td>
-<td>42,500</td>
+<td>50,500</td>
 </tr>
 <tr>
 <td>5</td>
-<td>PaPaLarry</td>
-<td>40,500</td>
+<td>Nana_Sharon</td>
+<td>43,500</td>
 </tr>
 <tr>
 <td>6</td>
 <td>JoAnnmeme</td>
-<td>38,000</td>
+<td>42,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>Nana_Sharon</td>
-<td>31,500</td>
+<td>PaPaLarry</td>
+<td>41,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>gracie</td>
-<td>22,000</td>
+<td>23,000</td>
 </tr>
 </tbody>
 </table>
