--- a/scores/index.html
+++ b/scores/index.html
@@ -414,6 +414,53 @@
 </tr>
 </tbody>
 </table>
+<h1 id="sharons-special">Sharon's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>gracie</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>Nana_Sharon</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>PaPaLarry</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>bill</td>
+<td>1,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -427,42 +474,42 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>79,000</td>
+<td>89,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>Norma1</td>
-<td>66,500</td>
+<td>72,500</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>66,000</td>
+<td>JoAnnmeme</td>
+<td>68,000</td>
 </tr>
 <tr>
 <td>4</td>
+<td>bill</td>
+<td>67,000</td>
+</tr>
+<tr>
+<td>5</td>
 <td>patc</td>
 <td>64,000</td>
 </tr>
 <tr>
-<td>5</td>
-<td>JoAnnmeme</td>
-<td>60,000</td>
-</tr>
-<tr>
 <td>6</td>
 <td>Nana_Sharon</td>
-<td>55,500</td>
+<td>59,500</td>
 </tr>
 <tr>
 <td>7</td>
 <td>PaPaLarry</td>
-<td>49,000</td>
+<td>51,000</td>
 </tr>
 <tr>
 <td>8</td>
 <td>gracie</td>
-<td>35,000</td>
+<td>47,000</td>
 </tr>
 </tbody>
 </table>
