--- a/scores/index.html
+++ b/scores/index.html
@@ -377,6 +377,58 @@
 </tr>
 </tbody>
 </table>
+<h1 id="no-limit-omaha-hi-lo">No limit Omaha Hi-Lo</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>Maryjean</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>PaPaLarry</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>patc</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Norma1</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>bill</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>Nana_Sharon</td>
+<td>2,000</td>
+</tr>
+<tr>
+<td>7</td>
+<td>JoAnnmeme</td>
+<td>1,000</td>
+</tr>
+<tr>
+<td>8</td>
+<td>gracie</td>
+<td>500</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -390,42 +442,42 @@
 <tr>
 <td>1</td>
 <td>Maryjean</td>
-<td>95,000</td>
+<td>107,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>JoAnnmeme</td>
-<td>76,000</td>
+<td>patc</td>
+<td>82,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>patc</td>
-<td>74,000</td>
+<td>Norma1</td>
+<td>79,000</td>
 </tr>
 <tr>
 <td>4</td>
-<td>Norma1</td>
+<td>JoAnnmeme</td>
+<td>77,000</td>
+</tr>
+<tr>
+<td>5t</td>
+<td>PaPaLarry</td>
 <td>73,000</td>
 </tr>
 <tr>
-<td>5</td>
+<td>5t</td>
 <td>bill</td>
-<td>69,000</td>
-</tr>
-<tr>
-<td>6</td>
-<td>Nana_Sharon</td>
-<td>63,500</td>
+<td>73,000</td>
 </tr>
 <tr>
 <td>7</td>
-<td>PaPaLarry</td>
-<td>63,000</td>
+<td>Nana_Sharon</td>
+<td>65,500</td>
 </tr>
 <tr>
 <td>8</td>
 <td>gracie</td>
-<td>48,000</td>
+<td>48,500</td>
 </tr>
 </tbody>
 </table>
