--- a/scores/index.html
+++ b/scores/index.html
@@ -409,6 +409,48 @@
 </tr>
 </tbody>
 </table>
+<h1 id="bills-special">Bill's Special</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>patc</td>
+<td>12,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>Maryjean</td>
+<td>10,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>JoAnnmeme</td>
+<td>8,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>6,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>PaPaLarry</td>
+<td>4,000</td>
+</tr>
+<tr>
+<td>6</td>
+<td>bill</td>
+<td>2,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -422,32 +464,32 @@
 <tr>
 <td>1</td>
 <td>JoAnnmeme</td>
-<td>50,000</td>
+<td>58,000</td>
 </tr>
 <tr>
 <td>2</td>
 <td>patc</td>
-<td>44,000</td>
+<td>56,000</td>
 </tr>
 <tr>
 <td>3</td>
 <td>Maryjean</td>
+<td>46,000</td>
+</tr>
+<tr>
+<td>4t</td>
+<td>Nana_Sharon</td>
 <td>36,000</td>
 </tr>
 <tr>
-<td>4</td>
+<td>4t</td>
 <td>bill</td>
-<td>34,000</td>
-</tr>
-<tr>
-<td>5</td>
-<td>Nana_Sharon</td>
-<td>30,000</td>
+<td>36,000</td>
 </tr>
 <tr>
 <td>6</td>
 <td>PaPaLarry</td>
-<td>14,000</td>
+<td>18,000</td>
 </tr>
 </tbody>
 </table>
