--- a/index.html
+++ b/index.html
@@ -360,6 +360,43 @@
 </tr>
 </tbody>
 </table>
+<h1 id="main-event">main event</h1>
+<table>
+<thead>
+<tr>
+<th>Place</th>
+<th>User</th>
+<th>Points</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>1</td>
+<td>bill</td>
+<td>1,000,000</td>
+</tr>
+<tr>
+<td>2</td>
+<td>JoAnnmeme</td>
+<td>950,000</td>
+</tr>
+<tr>
+<td>3</td>
+<td>PaPaLarry</td>
+<td>900,000</td>
+</tr>
+<tr>
+<td>4</td>
+<td>Nana_Sharon</td>
+<td>850,000</td>
+</tr>
+<tr>
+<td>5</td>
+<td>patc</td>
+<td>800,000</td>
+</tr>
+</tbody>
+</table>
 <h1 id="month-point-totals">Month Point Totals</h1>
 <table>
 <thead>
@@ -372,33 +409,33 @@
 <tbody>
 <tr>
 <td>1</td>
-<td>JoAnnmeme</td>
-<td>90,000</td>
+<td>bill</td>
+<td>1,072,000</td>
 </tr>
 <tr>
 <td>2</td>
-<td>patc</td>
-<td>84,000</td>
+<td>JoAnnmeme</td>
+<td>1,040,000</td>
 </tr>
 <tr>
 <td>3</td>
-<td>bill</td>
-<td>72,000</td>
+<td>PaPaLarry</td>
+<td>938,000</td>
 </tr>
 <tr>
 <td>4</td>
 <td>Nana_Sharon</td>
-<td>68,000</td>
+<td>918,000</td>
 </tr>
 <tr>
 <td>5</td>
-<td>Maryjean</td>
-<td>64,000</td>
+<td>patc</td>
+<td>884,000</td>
 </tr>
 <tr>
 <td>6</td>
-<td>PaPaLarry</td>
-<td>38,000</td>
+<td>Maryjean</td>
+<td>64,000</td>
 </tr>
 </tbody>
 </table>
